Bump ktlint version to 0.48.2 (#233)